Добавлена отправка элетронной почты, исправлены баги

--- a/templates/info-customer.html
+++ b/templates/info-customer.html
@@ -84,7 +84,7 @@
                     <img class="number2" src="./static/img/04.png" alt="number">
                     <p>Являюсь студенткой 4 курса по направлениям: прикладная лингвистика, переводоведение, углубленное профессиональное изучение английского языка. В своем институте неоднократно проводила English Club для студентов (вид внеучебной деятельности). В школьном возрасте ездила по обмену и училась в Бристоле, Великобритания. За моей спиной успешная сдача IELTS General на 7.5 в 2019 году, сейчас активно готовлюсь к CAE and IELTS Academic.</p>
                 </div>
-                <form action="#"  class="help_button">
+                <form action="./connection"  class="help_button" method="post">
                     <div class="help-button-test2">
                         <button type="submit" class="help_test_button" id="">Оставить заявку</button>
                     </div>
