--- a/templates/test.html
+++ b/templates/test.html
@@ -19,8 +19,8 @@
             </div>
             <nav>
                 <ul class="header-nav">
-                    <li><a class="link" href="/">Преимущества теста</a></li>
-                    <li><a class="link" href="/">Уровни знания языка</a></li>
+                    <li><a class="link" href="/#ADVAN_TEST">Преимущества теста</a></li>
+                    <li><a class="link" href="/#LANGUAGE_LEVELS">Уровни знания языка</a></li>
                     <li><a class="link" href="mailto:englishtest@yandex.ru">Свяжитесь с нами</a></li>
                     <li><a class="link" href="#">О проекте</a></li>
                 </ul>
@@ -132,8 +132,8 @@
             <div class="footer-navi">
                 <nav>
                     <ul class="footer-nav">
-                        <li><a class="footer-link" href="/">Преимущества теста</a></li>
-                        <li><a class="footer-link" href="/">Уровни знания языка</a></li>
+                        <li><a class="footer-link" href="/#ADVAN_TEST">Преимущества теста</a></li>
+                        <li><a class="footer-link" href="/#LANGUAGE_LEVELS">Уровни знания языка</a></li>
                         <li><a class="footer-link" href="mailto:englishtest@yandex.ru">Свяжитесь с нами</a></li>
                         <li><a class="footer-link" href="#">О проекте</a></li>
                     </ul>
