переименован index с маленькой буквы, доработка кода

--- a/templates/index.html
+++ b/templates/index.html
@@ -260,6 +260,9 @@
                 </div>
             </div>
         </div>
+                </div>
+            </div>
+        </div>
     </section>
     <section class="TEST">
         <div class="section">
