--- a/templates/connection.html
+++ b/templates/connection.html
@@ -20,7 +20,7 @@
 
     <form class="CONNECTION" action="./" method="get">
         <div class="Name-logo-conn">
-            <a href="./"><img class="Name-logo-conn-img" src="./static/img/Иконка _Лого_ (1).svg"></a>
+            <a href="/info-customer"><img class="Name-logo-conn-img" src="./static/img/Иконка _Лого_ (1).svg"></a>
             <img class="Name-logo-img1-conn" src="./static/img/Ellipse 6 (2).svg">
             <a href="./info-customer"><img class="Name-logo-img-conn" src="./static/img/Vector (5).svg"></a>
         </div>
@@ -38,7 +38,7 @@
 
      <form class="CONNECTION" action="./connection" method="post">
         <div class="Name-logo-conn">
-            <a href="./"><img class="Name-logo-conn-img" src="./static/img/Иконка _Лого_ (1).svg"></a>
+            <a href="/info-customer"><img class="Name-logo-conn-img" src="./static/img/Иконка _Лого_ (1).svg"></a>
             <img class="Name-logo-img1-conn" src="./static/img/Ellipse 6 (2).svg">
             <a href="./info-customer"><img class="Name-logo-img-conn" src="./static/img/Vector (5).svg"></a>
         </div>
