--- a/templates/info-customer.html
+++ b/templates/info-customer.html
@@ -18,7 +18,7 @@
     <div class="section">
         <div class="section-header">
             <div class="logo">
-                <a href="./"><img src="./static/img/Иконка _Лого_ (1).svg"></a>
+                <a href="/"><img src="./static/img/Иконка _Лого_ (1).svg"></a>
             </div>
             <div class="dropdown">
                 <!-- <button onclick="myFunction()" class="dropbtn"> Выпадающий</button> -->
@@ -30,9 +30,9 @@
                         <a href="#"><img class="Name-logo-img-info1 Name-logo-mob3" src="./static/img/Vector (5).svg"></a>
                     </div>
                     <div class="header-nav-mob">
-                        <a class="link" href="./">Главная</a>
-                        <a class="link" href="./#ADVAN_TEST">Преимущества теста</a>
-                        <a class="link" href="./#LANGUAGE_LEVELS">Уровни знания языка</a>
+                        <a class="link" href="">Главная</a>
+                        <a class="link" href="/#ADVAN_TEST">Преимущества теста</a>
+                        <a class="link" href="/#LANGUAGE_LEVELS">Уровни знания языка</a>
                         <form class="dropdown-button-mob" action="./next_test" method="post">
                             <button class="dropdown-button-mob1">Пройти тест</button>
                         </form>
@@ -182,8 +182,8 @@
             <div class="footer-navi">
                 <nav>
                     <ul class="footer-nav">
-                        <li><a class="footer-link" href="./#ADVAN_TEST">Преимущества теста</a></li>
-                        <li><a class="footer-link" href="./#LANGUAGE_LEVELS">Уровни знания языка</a></li>
+                        <li><a class="footer-link" href="/#ADVAN_TEST">Преимущества теста</a></li>
+                        <li><a class="footer-link" href="/#LANGUAGE_LEVELS">Уровни знания языка</a></li>
                         <li><a class="footer-link" href="mailto:Vorobeyenglish@ya.ru">Свяжитесь с нами</a></li>
                         <!-- <li><a class="footer-link" href="#">О проекте</a></li> -->
                         <li><p class="mob-1 footer-link">© Vorobey English 2023<br> Все права защищены</p></li>
