--- a/templates/next_test.html
+++ b/templates/next_test.html
@@ -16,9 +16,9 @@
 
     <form class="NAME_LOGO_INFO" action="./test" method="post">
         <div class="Name-logo">
-            <a href="./"><img class="logo_mob" src="./static/img/Иконка _Лого_ (1).svg"></a>
+            <a href="/"><img class="logo_mob" src="./static/img/Иконка _Лого_ (1).svg"></a>
             <img class="Name-logo-img1-info" src="./static/img/Ellipse 6 (2).svg">
-            <a href="./"><img class="Name-logo-img-info" src="./static/img/Vector (5).svg"></a>
+            <a href="/"><img class="Name-logo-img-info" src="./static/img/Vector (5).svg"></a>
         </div>
         <div class="info">
             <p>Добро пожаловать!<br>Вы собираетесь<br class="br-mob1"> начать тест</p>
@@ -41,9 +41,9 @@
 
 <form class="NAME_LOGO" action="./next_test" method="post">
     <div class="Name-logo">
-        <a href="./"><img class="logo_mob" src="./static/img/Иконка _Лого_ (1).svg"></a>
+        <a href="/"><img class="logo_mob" src="./static/img/Иконка _Лого_ (1).svg"></a>
         <img class="Name-logo-img1" src="./static/img/Ellipse 6 (2).svg">
-        <a href="./"><img class="Name-logo-img" src="./static/img/Vector (5).svg"></a>
+        <a href="/"><img class="Name-logo-img" src="./static/img/Vector (5).svg"></a>
     </div>
     <div class="name">
         <label class="label">Введите своё имя, чтобы мы знали как к<br> Вам обращаться
