исправлено количество ответов и сылка в футоре теста

--- a/templates/test.html
+++ b/templates/test.html
@@ -149,7 +149,7 @@
 <footer class="FOOTER">
     <div class="section-footer">
             <div class="footer-logo">
-                <a href=""><img src="./static/img/Vector (3).svg"></a>
+                <a href="/"><img src="./static/img/Vector (3).svg"></a>
                 <p class="footer-logo-p">Image by www.freepik.com</p>
                 <p class="footer-logo-p2">© Vorobey English 2023. Все права защищены</p>
                 <p class="footer-logo-p2" >Проект разработан в рамках Pineapple Practice</p>
