изменение имен картинок

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <link href="./static/css/style.css" rel="stylesheet" type="text/css">
     <link href="./static/css/fonts.css" rel="stylesheet" type="text/css">
     <link href="./static/css/slider.css">
-    <link rel="icon" sizes="16x16" href="./static/img/Иконка _Лого_ (1_1).svg" type="image/x-icon">
+    <link rel="icon" sizes="16x16" href="./static/img/Logo1_1.svg" type="image/x-icon">
     <title>Vorobeyenglish</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
     <div class="section">
         <div class="section-header">
             <div class="logo">
-                <img src="./static/img/Иконка _Лого_ (1).svg">
+                <img src="./static/img/Logo1.svg">
             </div>
             <nav>
                 <div class="dropdown">
@@ -24,7 +24,7 @@
                     <a onclick="myFunction()"><img class="dropbtn" src="./static/img/Vector (6).svg"></a>
                     <div id="myDropdown" class="dropdown-content">
                         <div class="Name-logo">
-                            <a href="#"><img class="Name-logo-mob1" src="./static/img/Иконка _Лого_ (1).svg"></a>
+                            <a href="#"><img class="Name-logo-mob1" src="./static/img/Logo1.svg"></a>
                             <img class="Name-logo-img1-info" src="./static/img/Ellipse 6 (2).svg">
                             <a href="#"><img class="Name-logo-img-info Name-logo-mob" src="./static/img/Vector (5).svg"></a>
                         </div>
@@ -66,9 +66,9 @@
                             Пройдите наш <span  style="font-weight:900"> бесплатный <br></span> онлайн-тест и узнайте свой уровень <br>владения английским языком
                         </p>
                         <ul class="home_ul">
-                            <li class="home_li"><img class="check" src="./static/img/Иконка _Галочка_ 3.svg">Без регистрации</li>
-                            <li class="home_li"><img class="check" src="./static/img/Иконка _Галочка_ 3.svg">Без ограничений по времени</li>
-                            <li class="home_li"><img class="check" src="./static/img/Иконка _Галочка_ 3.svg">По международным стандартам</li>
+                            <li class="home_li"><img class="check" src="./static/img/galochka icon_3.svg">Без регистрации</li>
+                            <li class="home_li"><img class="check" src="./static/img/galochka icon_3.svg">Без ограничений по времени</li>
+                            <li class="home_li"><img class="check" src="./static/img/galochka icon_3.svg">По международным стандартам</li>
                         </ul>
                         <div class="buttonsHome">
                             <form action="./next_test" method="post">
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div class="image-home">
-                        <img src="./static/img/иллюстр 6 (1).svg">
+                        <img src="./static/img/illustration 6 (1).svg">
                     </div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                     <h1 class="title_2">Почему важно знать<br>свой уровень английского?</h1>
                     <div class="section-home-2">
                         <div class="image-home-2">
-                            <img src="./static/img/иллюстр 2 1.svg">
+                            <img src="./static/img/illustration 2 1.svg">
                         </div>
                         <div class="home_p home-text">
                             <p>Если Вы решили улучшить свой английский, перед началом обучения всегда надо определить свой уровень знаний.</p>
@@ -150,7 +150,7 @@
             <div class="content">
                 <div class="text_test">
                     <h1 class="title_3">Уровни знания языка по Европейской системе</h1>
-                    <img class='text_test_img' src="./static/img/иллюстр 1 1.svg">
+                    <img class='text_test_img' src="./static/img/illustration 1 1.svg">
                 </div>
                 <div class="container container_lev">
                     <div class="box-1 container-box">
@@ -158,7 +158,7 @@
                         <h3>А1</h3>
                         <p class="container-box-p">Elementary</p>
                         <p class="container-box-p2">Элементарный, базовый уровень знания английского языка. Чтение и перевод со словарём. Словарный запас<span  style="font-weight:900"> менее 1500</span> слов.</p>
-                        <img class="ball" src="./static/img/иллюстр 3 1.svg">
+                        <img class="ball" src="./static/img/illustration 3 1.svg">
                     </div>
                     <div class="box-1 container-box">
                         <img class="cloud" src="./static/img/Vector 1 1.png">
@@ -177,14 +177,14 @@
                         <h3>B2</h3>
                         <p class="container-box-p">Upper Intermediate</p>
                         <p class="container-box-p2">Средне-продвинутый уровень английского. Вы владеете разговорным языком в различных ситуациях (от бытовых до профессиональных), можете без подготовки общаться с носителем языка. Словарный запас <span  style="font-weight:900">3000-4000</span> слов.</p>
-                        <img class="ball-2" src="./static/img/иллюстр 5 1.svg">
+                        <img class="ball-2" src="./static/img/illustration 5 1.svg">
                     </div>
                     <div class="box-1 container-box">
                         <img class="cloud" src="./static/img/Vector 5.svg">
                         <h3>C1</h3>
                         <p class="container-box-p">Advanced</p>
                         <p class="container-box-p2">Продвинутый уровень. Свободное владение. Вы понимаете разнообразные сложные развернутые тексты и можете выявить содержащиеся в них имплицитные значения, умеете без подготовки, бегло, не испытывая трудности в подборе слов, выражать свои мысли. Словарный запас <span  style="font-weight:900">4000-5000</span> слов.</p>
-                        <img class="ball-3" src="./static/img/иллюстр 4 1.svg">
+                        <img class="ball-3" src="./static/img/illustration 4 1.svg">
                     </div>
                     <div class="box-1 container-box">
                         <img class="cloud" src="./static/img/Vector 1 1.png">
@@ -203,7 +203,7 @@
                                         <h3>А1</h3>
                                         <p class="container-box-p">Elementary</p>
                                         <p class="container-box-p2">Элементарный, базовый уровень знания английского языка. Чтение и перевод со словарём. Словарный запас<span  style="font-weight:900"> менее 1500</span> слов.</p>
-                                        <img class="ball" src="./static/img/иллюстр 3 1.svg">
+                                        <img class="ball" src="./static/img/illustration 3 1.svg">
                                     </div>
                                 </div> <!-- Конец 1 слайда -->
                                 <div class="item"><!-- Начало 2 слайда -->
@@ -225,7 +225,7 @@
                                 <div class="item"><!-- Начало 4 слайда -->
                                     <div class="box-1 container-box">
                                         <img class="cloud" src="./static/img/Vector 1 1.png">
-                                        <img class="ball-2" src="./static/img/иллюстр 5 1.svg">
+                                        <img class="ball-2" src="./static/img/illustration 5 1.svg">
 
                                         <h3>B2</h3>
 
@@ -235,7 +235,7 @@
                                 </div><!-- Конец 4 слайда -->
                                 <div class="item"><!-- Начало 5 слайда -->
                                     <div class="box-1 container-box">
-                                        <img class="ball-3" src="./static/img/иллюстр 4 1.svg">
+                                        <img class="ball-3" src="./static/img/illustration 4 1.svg">
                                         <img class="cloud" src="./static/img/Vector 5.svg">
                                         <h3>C1</h3>
                                         <p class="container-box-p">Advanced</p>
