--- a/templates/info-customer.html
+++ b/templates/info-customer.html
@@ -9,7 +9,7 @@
     <link href="./static/css/test.css" rel="stylesheet" type="text/css">
     <link href="./static/css/fonts.css" rel="stylesheet" type="text/css">
     <link href="./static/css/mob.css" media="screen and (max-width: 414px)" rel="stylesheet" type="text/css">
-    <link rel="icon" sizes="16x16" href="./static/img/Иконка _Лого_ (1_1).svg" type="image/x-icon">
+    <link rel="icon" sizes="16x16" href="./static/img/Logo1_1.svg" type="image/x-icon">
     <title>Vorobeyenglish</title>
 </head>
 <body>
@@ -18,14 +18,14 @@
     <div class="section">
         <div class="section-header">
             <div class="logo">
-                <a href="/"><img src="./static/img/Иконка _Лого_ (1).svg"></a>
+                <a href="/"><img src="./static/img/Logo1.svg"></a>
             </div>
             <div class="dropdown">
                 <!-- <button onclick="myFunction()" class="dropbtn"> Выпадающий</button> -->
                 <a onclick="myFunction()"><img class="dropbtn" src="./static/img/Vector (6).svg"></a>
                 <div id="myDropdown" class="dropdown-content">
                     <div class="Name-logo-test">
-                        <a href="#"><img class="Name-logo-mob2" src="./static/img/Иконка _Лого_ (1).svg"></a>
+                        <a href="#"><img class="Name-logo-mob2" src="./static/img/Logo1.svg"></a>
                         <img class="Name-logo-img1-info1" src="./static/img/Ellipse 6 (2).svg">
                         <a href="#"><img class="Name-logo-img-info1 Name-logo-mob3" src="./static/img/Vector (5).svg"></a>
                     </div>
