--- a/templates/next_test.html
+++ b/templates/next_test.html
@@ -7,7 +7,7 @@
     <link href="./static/css/name.css" rel="stylesheet" type="text/css">
     <link href="./static/css/fonts.css" rel="stylesheet" type="text/css">
     <link href="./static/css/mob.css" media="screen and (max-width: 414px)" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" sizes="16x16" href="./static/img/Иконка _Лого_ (1_1).svg" type="image/x-icon">
+    <link rel="stylesheet" sizes="16x16" href="./static/img/Logo1_1.svg" type="image/x-icon">
     <title>Vorobeyenglish</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
 
     <form class="NAME_LOGO_INFO" action="./test" method="post">
         <div class="Name-logo">
-            <a href="/"><img class="logo_mob" src="./static/img/Иконка _Лого_ (1).svg"></a>
+            <a href="/"><img class="logo_mob" src="./static/img/Logo1.svg"></a>
             <img class="Name-logo-img1-info" src="./static/img/Ellipse 6 (2).svg">
             <a href="/"><img class="Name-logo-img-info" src="./static/img/Vector (5).svg"></a>
         </div>
@@ -42,7 +42,7 @@
 
 <form class="NAME_LOGO" action="./next_test" method="post">
     <div class="Name-logo">
-        <a href="/"><img class="logo_mob" src="./static/img/Иконка _Лого_ (1).svg"></a>
+        <a href="/"><img class="logo_mob" src="./static/img/Logo1.svg"></a>
         <img class="Name-logo-img1" src="./static/img/Ellipse 6 (2).svg">
         <a href="/"><img class="Name-logo-img" src="./static/img/Vector (5).svg"></a>
     </div>
