--- a/templates/connection.html
+++ b/templates/connection.html
@@ -7,7 +7,7 @@
     <link href="./static/css/connection.css" rel="stylesheet" type="text/css">
     <link href="./static/css/fonts.css" rel="stylesheet" type="text/css">
     <link href="./static/css/mob.css" media="screen and (max-width: 414px)" rel="stylesheet" type="text/css">
-    <link rel="icon" sizes="16x16" href="./static/img/Иконка _Лого_ (1_1).svg" type="image/x-icon">
+    <link rel="icon" sizes="16x16" href="./static/img/Logo1_1.svg" type="image/x-icon">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@@ -20,7 +20,7 @@
 
     <form class="CONNECTION" action="../" method="get">
         <div class="Name-logo-conn">
-            <a href="/info-customer"><img class="Name-logo-conn-img" src="./static/img/Иконка _Лого_ (1).svg"></a>
+            <a href="/info-customer"><img class="Name-logo-conn-img" src="./static/img/Logo1.svg"></a>
             <img class="Name-logo-img1-conn" src="./static/img/Ellipse 6 (2).svg">
             <a href="./info-customer"><img class="Name-logo-img-conn" src="./static/img/Vector (5).svg"></a>
         </div>
@@ -38,7 +38,7 @@
 
      <form class="CONNECTION" action="./connection" method="post">
         <div class="Name-logo-conn">
-            <a href="/info-customer"><img class="Name-logo-conn-img" src="./static/img/Иконка _Лого_ (1).svg"></a>
+            <a href="/info-customer"><img class="Name-logo-conn-img" src="./static/img/Logo1.svg"></a>
             <img class="Name-logo-img1-conn" src="./static/img/Ellipse 6 (2).svg">
             <a href="./info-customer"><img class="Name-logo-img-conn" src="./static/img/Vector (5).svg"></a>
         </div>
