--- a/templates/test.html
+++ b/templates/test.html
@@ -8,7 +8,7 @@
     <link href="./static/css/test.css" rel="stylesheet" type="text/css">
     <link href="./static/css/fonts.css" rel="stylesheet" type="text/css">
     <link href="./static/css/mob.css" media="screen and (max-width: 414px)" rel="stylesheet" type="text/css">
-    <link rel="icon" sizes="16x16" href="./static/img/Иконка _Лого_ (1_1).svg" type="image/x-icon">
+    <link rel="icon" sizes="16x16" href="./static/img/Logo1_1.svg" type="image/x-icon">
     <title>Vorobeyenglish</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
     <div class="section">
         <div class="section-header">
             <div class="logo">
-                <a href="/"><img src="./static/img/Иконка _Лого_ (1).svg"></a>
+                <a href="/"><img src="./static/img/Logo1.svg"></a>
             </div>
             <nav>
                 <div class="dropdown">
@@ -25,7 +25,7 @@
                     <a onclick="myFunction()"><img class="dropbtn" src="./static/img/Vector (6).svg"></a>
                     <div id="myDropdown" class="dropdown-content">
                         <div class="Name-logo-test">
-                            <a href="#"><img class="Name-logo-mob2" src="./static/img/Иконка _Лого_ (1).svg"></a>
+                            <a href="#"><img class="Name-logo-mob2" src="./static/img/Logo1.svg"></a>
                             <img class="Name-logo-img1-info1" src="./static/img/Ellipse 6 (2).svg">
                             <a href="#"><img class="Name-logo-img-info1 Name-logo-mob3" src="./static/img/Vector (5).svg"></a>
                         </div>
